added RemoveShortcuts fix to wxs scripts for Todd/Paratext

--- a/installer/AIGuesser64bitMM/AILookup_MergeModule.wxs
+++ b/installer/AIGuesser64bitMM/AILookup_MergeModule.wxs
@@ -69,5 +69,9 @@
             </Directory>
 
         </Directory>
+
+        <InstallExecuteSequence>
+            <RemoveShortcuts>Installed AND NOT UPGRADINGPRODUCTCODE AND REMOVE="ALL"</RemoveShortcuts>
+        </InstallExecuteSequence>
     </Module>
 </Wix>
