--- a/installer/AIGuesserMM/AILookup_MergeModule.wxs
+++ b/installer/AIGuesserMM/AILookup_MergeModule.wxs
@@ -66,5 +66,9 @@
             </Directory>
 
         </Directory>
+
+        <InstallExecuteSequence>
+            <RemoveShortcuts>Installed AND NOT UPGRADINGPRODUCTCODE AND REMOVE="ALL"</RemoveShortcuts>
+        </InstallExecuteSequence>
     </Module>
 </Wix>
