--- a/installer/CcDLLsMM/CcDlls_MergeModule.wxs
+++ b/installer/CcDLLsMM/CcDlls_MergeModule.wxs
@@ -61,5 +61,9 @@
             </Directory>
 
         </Directory>
+
+        <InstallExecuteSequence>
+            <RemoveShortcuts>Installed AND NOT UPGRADINGPRODUCTCODE AND REMOVE="ALL"</RemoveShortcuts>
+        </InstallExecuteSequence>
     </Module>
 </Wix>
