--- a/installer/EcTranslatorsMM/EcTranslators_MergeModule.wxs
+++ b/installer/EcTranslatorsMM/EcTranslators_MergeModule.wxs
@@ -656,5 +656,9 @@
             </Directory>
 
         </Directory>
+
+        <InstallExecuteSequence>
+            <RemoveShortcuts>Installed AND NOT UPGRADINGPRODUCTCODE AND REMOVE="ALL"</RemoveShortcuts>
+        </InstallExecuteSequence>
     </Module>
 </Wix>
