--- a/installer/PythonEc64bitMM/PythonEc_MergeModule.wxs
+++ b/installer/PythonEc64bitMM/PythonEc_MergeModule.wxs
@@ -103,5 +103,9 @@
             </Directory>
 
         </Directory>
+
+        <InstallExecuteSequence>
+            <RemoveShortcuts>Installed AND NOT UPGRADINGPRODUCTCODE AND REMOVE="ALL"</RemoveShortcuts>
+        </InstallExecuteSequence>
     </Module>
 </Wix>
