--- a/installer/PythonEcMM/PythonEc_MergeModule.wxs
+++ b/installer/PythonEcMM/PythonEc_MergeModule.wxs
@@ -110,5 +110,9 @@
             </Directory>
 
         </Directory>
+
+        <InstallExecuteSequence>
+            <RemoveShortcuts>Installed AND NOT UPGRADINGPRODUCTCODE AND REMOVE="ALL"</RemoveShortcuts>
+        </InstallExecuteSequence>
     </Module>
 </Wix>
