--- a/installer/CcDLLs64bitMM/CcDlls_MergeModule.wxs
+++ b/installer/CcDLLs64bitMM/CcDlls_MergeModule.wxs
@@ -62,5 +62,9 @@
             </Directory>
 
         </Directory>
+
+        <InstallExecuteSequence>
+            <RemoveShortcuts>Installed AND NOT UPGRADINGPRODUCTCODE AND REMOVE="ALL"</RemoveShortcuts>
+        </InstallExecuteSequence>
     </Module>
 </Wix>
