--- a/installer/EcFolderACLsMM/EcFolderACLs_MergeModule.wxs
+++ b/installer/EcFolderACLsMM/EcFolderACLs_MergeModule.wxs
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi" xmlns:util="http://schemas.microsoft.com/wix/UtilExtension">
-    <Module Id="EcFolderACLsMM" Language="1033" Version="1.1.0.0">
+    <Module Id="EcFolderACLsMM" Language="1033" Version="5.0.0.0">
         <Package Id="36C3C03E-EC67-49D2-9113-6D5F70D84C0A" Keywords="MergeModule, MSI, Database, Encoding Converters"
                  Description="Encoding Converters Folders ACL configuration" Comments="Sets write permissions ofr all users on Encoding Converters data folders"
-                 Manufacturer="SIL International" InstallerVersion="200" Languages="1033" SummaryCodepage="1252"/>
+                 Manufacturer="SIL International" InstallerVersion="200" Languages="1033" />
         <Directory Id="TARGETDIR" Name="SourceDir">
             <Directory Id="CommonAppDataFolder" SourceName="AppData">
                 <Directory Id="ACLAppDataSIL" Name="SIL">
