--- a/installer/PerlEc64bitMM/PerlEc_MergeModule.wxs
+++ b/installer/PerlEc64bitMM/PerlEc_MergeModule.wxs
@@ -53,5 +53,9 @@
             </Directory>
 
         </Directory>
+
+        <InstallExecuteSequence>
+            <RemoveShortcuts>Installed AND NOT UPGRADINGPRODUCTCODE AND REMOVE="ALL"</RemoveShortcuts>
+        </InstallExecuteSequence>
     </Module>
 </Wix>
