--- a/installer/AIGuesserMM/AILookup_MergeModule.wxs
+++ b/installer/AIGuesserMM/AILookup_MergeModule.wxs
@@ -7,8 +7,32 @@
             <Directory Id="MergeRedirectFolder">
 
                 <Component Id="AIGuesserEC.dll" Guid="50092CDC-A19C-406F-B649-47268C66C8EE">
+                    <Class Id="{B421C839-D95E-40E4-86BF-A3B0E4510252}" Context="InprocServer32" Description="SilEncConverters40.AdaptItEncConverter" ThreadingModel="both" ForeignServer="mscoree.dll">
+                        <ProgId Id="SilEncConverters40.AdaptItEncConverter" Description="SilEncConverters40.AdaptItEncConverter" />
+                    </Class>
+                    <Class Id="{F15BC80C-57A2-4C32-90B6-3689D8B3F6F1}" Context="InprocServer32" Description="SilEncConverters40.AdaptItEncConverterConfig" ThreadingModel="both" ForeignServer="mscoree.dll">
+                        <ProgId Id="SilEncConverters40.AdaptItEncConverterConfig" Description="SilEncConverters40.AdaptItEncConverterConfig" />
+                    </Class>
                     <File Id="AIGuesserEC.dll" Name="AIGuesserEC.dll" KeyPath="yes" Assembly=".net" AssemblyManifest="AIGuesserEC.dll" AssemblyApplication="AIGuesserEC.dll"
                           Source="..\..\output\Win32\release\AIGuesserEC.dll" />
+                    <RegistryValue Root="HKCR" Key="CLSID\{B421C839-D95E-40E4-86BF-A3B0E4510252}\Implemented Categories\{62C8FE65-4EBB-45e7-B440-6E39B2CDBF29}" Value="" Type="string" Action="write" />
+                    <RegistryValue Root="HKCR" Key="CLSID\{B421C839-D95E-40E4-86BF-A3B0E4510252}\InprocServer32\4.0.0.0" Name="Class" Value="SilEncConverters40.AdaptItEncConverter" Type="string" Action="write" />
+                    <RegistryValue Root="HKCR" Key="CLSID\{B421C839-D95E-40E4-86BF-A3B0E4510252}\InprocServer32\4.0.0.0" Name="Assembly" Value="SilEncConverters40, Version=4.0.0.0, Culture=neutral, PublicKeyToken=f1447bae1e63f485" Type="string" Action="write" />
+                    <RegistryValue Root="HKCR" Key="CLSID\{B421C839-D95E-40E4-86BF-A3B0E4510252}\InprocServer32\4.0.0.0" Name="RuntimeVersion" Value="v4.0.30319" Type="string" Action="write" />
+                    <RegistryValue Root="HKCR" Key="CLSID\{B421C839-D95E-40E4-86BF-A3B0E4510252}\InprocServer32\4.0.0.0" Name="CodeBase" Value="file:///[#AIGuesserEC.dll]" Type="string" Action="write" />
+                    <RegistryValue Root="HKCR" Key="CLSID\{B421C839-D95E-40E4-86BF-A3B0E4510252}\InprocServer32" Name="Class" Value="SilEncConverters40.AdaptItEncConverter" Type="string" Action="write" />
+                    <RegistryValue Root="HKCR" Key="CLSID\{B421C839-D95E-40E4-86BF-A3B0E4510252}\InprocServer32" Name="Assembly" Value="SilEncConverters40, Version=4.0.0.0, Culture=neutral, PublicKeyToken=f1447bae1e63f485" Type="string" Action="write" />
+                    <RegistryValue Root="HKCR" Key="CLSID\{B421C839-D95E-40E4-86BF-A3B0E4510252}\InprocServer32" Name="RuntimeVersion" Value="v4.0.30319" Type="string" Action="write" />
+                    <RegistryValue Root="HKCR" Key="CLSID\{B421C839-D95E-40E4-86BF-A3B0E4510252}\InprocServer32" Name="CodeBase" Value="file:///[#AIGuesserEC.dll]" Type="string" Action="write" />
+                    <RegistryValue Root="HKCR" Key="CLSID\{F15BC80C-57A2-4C32-90B6-3689D8B3F6F1}\Implemented Categories\{62C8FE65-4EBB-45e7-B440-6E39B2CDBF29}" Value="" Type="string" Action="write" />
+                    <RegistryValue Root="HKCR" Key="CLSID\{F15BC80C-57A2-4C32-90B6-3689D8B3F6F1}\InprocServer32\4.0.0.0" Name="Class" Value="SilEncConverters40.AdaptItEncConverterConfig" Type="string" Action="write" />
+                    <RegistryValue Root="HKCR" Key="CLSID\{F15BC80C-57A2-4C32-90B6-3689D8B3F6F1}\InprocServer32\4.0.0.0" Name="Assembly" Value="SilEncConverters40, Version=4.0.0.0, Culture=neutral, PublicKeyToken=f1447bae1e63f485" Type="string" Action="write" />
+                    <RegistryValue Root="HKCR" Key="CLSID\{F15BC80C-57A2-4C32-90B6-3689D8B3F6F1}\InprocServer32\4.0.0.0" Name="RuntimeVersion" Value="v4.0.30319" Type="string" Action="write" />
+                    <RegistryValue Root="HKCR" Key="CLSID\{F15BC80C-57A2-4C32-90B6-3689D8B3F6F1}\InprocServer32\4.0.0.0" Name="CodeBase" Value="file:///[#AIGuesserEC.dll]" Type="string" Action="write" />
+                    <RegistryValue Root="HKCR" Key="CLSID\{F15BC80C-57A2-4C32-90B6-3689D8B3F6F1}\InprocServer32" Name="Class" Value="SilEncConverters40.AdaptItEncConverterConfig" Type="string" Action="write" />
+                    <RegistryValue Root="HKCR" Key="CLSID\{F15BC80C-57A2-4C32-90B6-3689D8B3F6F1}\InprocServer32" Name="Assembly" Value="SilEncConverters40, Version=4.0.0.0, Culture=neutral, PublicKeyToken=f1447bae1e63f485" Type="string" Action="write" />
+                    <RegistryValue Root="HKCR" Key="CLSID\{F15BC80C-57A2-4C32-90B6-3689D8B3F6F1}\InprocServer32" Name="RuntimeVersion" Value="v4.0.30319" Type="string" Action="write" />
+                    <RegistryValue Root="HKCR" Key="CLSID\{F15BC80C-57A2-4C32-90B6-3689D8B3F6F1}\InprocServer32" Name="CodeBase" Value="file:///[#AIGuesserEC.dll]" Type="string" Action="write" />
                 </Component>
 
                 <Directory Id="AiECFolder" Name="EC">
@@ -34,21 +58,19 @@
                             <Directory Id="AdaptIt_Plugin_About_box" Name="AdaptIt_Plug-in_About_box_files">
                                 <Component Id="AdaptIt_Plugin_About_boxComp" Guid="{C68152D2-C6CF-4823-8E0F-C60C7BE7A73E}">
                                     <File Id="ai_filelist.xml" Name="filelist.xml" KeyPath="yes" Source="..\..\redist\Help\AdaptIt_Plug-in_About_box_files\filelist.xml"/>
-                                    <File Id="ai_header.htm" Name="header.htm" Source="..\..\redist\Help\AdaptIt_Plug-in_About_box_files\header.htm"/>
-                                    <File Id="ai_colorschememapping.xml" Name="colorschememapping.xml" Source="..\..\redist\Help\AdaptIt_Plug-in_About_box_files\colorschememapping.xml"/>
+                                    <File Id="ai_item0023.xml" Name="item0023.xml" Source="..\..\redist\Help\AdaptIt_Plug-in_About_box_files\item0023.xml"/>
+                                    <File Id="ai_props024.xml" Name="props024.xml" Source="..\..\redist\Help\AdaptIt_Plug-in_About_box_files\props024.xml"/>
                                     <File Id="ai_themedata.thmx" Name="themedata.thmx" Source="..\..\redist\Help\AdaptIt_Plug-in_About_box_files\themedata.thmx"/>
-                                    <File Id="ai_image001.png" Name="image001.png" Source="..\..\redist\Help\AdaptIt_Plug-in_About_box_files\image001.png"/>
-                                    <File Id="ai_image002.jpg" Name="image002.jpg" Source="..\..\redist\Help\AdaptIt_Plug-in_About_box_files\image002.jpg"/>
-                                    <File Id="ai_image003.png" Name="image003.png" Source="..\..\redist\Help\AdaptIt_Plug-in_About_box_files\image003.png"/>
-                                    <File Id="ai_image004.jpg" Name="image004.jpg" Source="..\..\redist\Help\AdaptIt_Plug-in_About_box_files\image004.jpg"/>
-                                    <File Id="ai_image005.png" Name="image005.png" Source="..\..\redist\Help\AdaptIt_Plug-in_About_box_files\image005.png"/>
-                                    <File Id="ai_image006.jpg" Name="image006.jpg" Source="..\..\redist\Help\AdaptIt_Plug-in_About_box_files\image006.jpg"/>
-                                    <File Id="ai_image007.png" Name="image007.png" Source="..\..\redist\Help\AdaptIt_Plug-in_About_box_files\image007.png"/>
-                                    <File Id="ai_image008.jpg" Name="image008.jpg" Source="..\..\redist\Help\AdaptIt_Plug-in_About_box_files\image008.jpg"/>
-                                    <File Id="ai_image009.png" Name="image009.png" Source="..\..\redist\Help\AdaptIt_Plug-in_About_box_files\image009.png"/>
-                                    <File Id="ai_image010.jpg" Name="image010.jpg" Source="..\..\redist\Help\AdaptIt_Plug-in_About_box_files\image010.jpg"/>
-                                    <File Id="ai_image011.png" Name="image011.png" Source="..\..\redist\Help\AdaptIt_Plug-in_About_box_files\image011.png"/>
+                                    <File Id="ai_colorschememapping.xml" Name="colorschememapping.xml" Source="..\..\redist\Help\AdaptIt_Plug-in_About_box_files\colorschememapping.xml"/>
+                                    <File Id="ai_header.htm" Name="header.htm" Source="..\..\redist\Help\AdaptIt_Plug-in_About_box_files\header.htm"/>
                                     <File Id="ai_image012.jpg" Name="image012.jpg" Source="..\..\redist\Help\AdaptIt_Plug-in_About_box_files\image012.jpg"/>
+                                    <File Id="ai_image014.jpg" Name="image014.jpg" Source="..\..\redist\Help\AdaptIt_Plug-in_About_box_files\image014.jpg"/>
+                                    <File Id="ai_image015.gif" Name="image015.gif" Source="..\..\redist\Help\AdaptIt_Plug-in_About_box_files\image015.gif"/>
+                                    <File Id="ai_image016.jpg" Name="image016.jpg" Source="..\..\redist\Help\AdaptIt_Plug-in_About_box_files\image016.jpg"/>
+                                    <File Id="ai_image017.jpg" Name="image017.jpg" Source="..\..\redist\Help\AdaptIt_Plug-in_About_box_files\image017.jpg"/>
+                                    <File Id="ai_image018.jpg" Name="image018.jpg" Source="..\..\redist\Help\AdaptIt_Plug-in_About_box_files\image018.jpg"/>
+                                    <File Id="ai_image021.jpg" Name="image021.jpg" Source="..\..\redist\Help\AdaptIt_Plug-in_About_box_files\image021.jpg"/>
+                                    <File Id="ai_image024.jpg" Name="image024.jpg" Source="..\..\redist\Help\AdaptIt_Plug-in_About_box_files\image024.jpg"/>
                                 </Component>
                             </Directory>
 
